--- a/content/posts/2023-03-14-Buch-Daniel-3,2534-43.md
+++ b/content/posts/2023-03-14-Buch-Daniel-3,2534-43.md
@@ -5,10 +5,7 @@ layout = 'post'
 categories = ['LECTIO 1']
 tags = ['LECTIO 1']
 date = '2023-03-14 07:30:04 +0100'
-summary = 'In jenen Tag sprach Asarja mitten im Feuer folgendes Gebet:
-Um deines Namens willen verwirf uns nicht für immer; löse deinen Bund nicht auf!
-Versag uns nicht dein Erbarmen, deinem Freund Abraham zuliebe, deinem Knecht Isaak und Israel, deinem Heiligen,
-denen du Nachkommen verheiß(....)'
+summary = 'In jenen Tag sprach Asarja mitten im Feuer folgendes Gebet: Um deines Namens willen verwirf uns nicht für immer; löse deinen Bund nicht auf! Versag uns nicht dein Erbarmen, deinem Freund Abraham zuliebe, deinem Knecht Isaak und Israel, deinem Heiligen, denen du Nachkommen verheiß(....)'
 +++
 In jenen Tag sprach Asarja mitten im Feuer folgendes Gebet:
 Um deines Namens willen verwirf uns nicht für immer; löse deinen Bund nicht auf!
