--- a/content/posts/2023-03-15-ps-147,12-1315-1619-20.md
+++ b/content/posts/2023-03-15-ps-147,12-1315-1619-20.md
@@ -5,17 +5,7 @@ layout = 'post'
 categories = ['PSALMUS']
 tags = ['PSALMUS']
 date = '2023-03-15 08:00:05 +0100'
-summary = 'Jerusalem, preise den Herrn,
-lobsinge, Zion, deinem Gott!
-Denn er hat die Riegel deiner Tore festgemacht,
-die Kinder in deiner Mitte gesegnet.
-
-Er sendet sein Wort zur Erde,
-rasch eilt sein Befehl dahin.
-Er spendet Schnee wie Wolle,
-streut den Reif aus wie Asche.
-
-Er verkünde....'
+summary = 'Jerusalem, preise den Herrn, lobsinge, Zion, deinem Gott! Denn er hat die Riegel deiner Tore festgemacht, die Kinder in deiner Mitte gesegnet. Er sendet sein Wort zur Erde, rasch eilt sein Befehl dahin. Er spendet Schnee wie Wolle, streut den Reif aus wie Asche. Er verkünde....'
 +++
 Jerusalem, preise den Herrn,
 lobsinge, Zion, deinem Gott!
