--- a/content/posts/2023-03-14-ps-25(24),4-56-78-9.md
+++ b/content/posts/2023-03-14-ps-25(24),4-56-78-9.md
@@ -5,16 +5,7 @@ layout = 'post'
 categories = ['PSALMUS']
 tags = ['PSALMUS']
 date = '2023-03-14 08:00:05 +0100'
-summary = 'Zeige mir, Herr, deine Wege,
-lehre mich deine Pfade!
-Führe mich in deiner Treue und lehre mich;
-denn du bist der Gott meines Heiles.
-Auf dich hoffe ich allezeit.
-
-Denk an dein Erbarmen, Herr,
-und an die Taten deiner Huld;
-denn sie bestehen seit Ewigkeit.
-Denk nicht an meine (....)'
+summary = 'Zeige mir, Herr, deine Wege, lehre mich deine Pfade! Führe mich in deiner Treue und lehre mich; denn du bist der Gott meines Heiles. Auf dich hoffe ich allezeit. Denk an dein Erbarmen, Herr, und an die Taten deiner Huld; denn sie bestehen seit Ewigkeit. Denk nicht an meine (....)'
 +++
 Zeige mir, Herr, deine Wege,
 lehre mich deine Pfade!
