--- a/content/posts/2023-03-16-ps-95(94),1-26-7abc7d-9.md
+++ b/content/posts/2023-03-16-ps-95(94),1-26-7abc7d-9.md
@@ -5,13 +5,7 @@ layout = 'post'
 categories = ['PSALMUS']
 tags = ['PSALMUS']
 date = '2023-03-16 08:00:05 +0100'
-summary = 'Kommt, lasst uns jubeln vor dem Herrn und zujauchzen dem Fels unsres Heiles!
-Lasst uns mit Lob seinem Angesicht nahen,
-vor ihm jauchzen mit Liedern!
-
-Kommt, lasst uns niederfallen, uns vor ihm verneigen,
-lasst uns niederknien vor dem Herrn, unserm Schöpfer!
-Denn er ist unser G....'
+summary = 'Kommt, lasst uns jubeln vor dem Herrn und zujauchzen dem Fels unsres Heiles! Lasst uns mit Lob seinem Angesicht nahen, vor ihm jauchzen mit Liedern! Kommt, lasst uns niederfallen, uns vor ihm verneigen, lasst uns niederknien vor dem Herrn, unserm Schöpfer! Denn er ist unser G....'
 linkedsummaryImage = 'psalmus.jpg'
 keepImageRatio = 'true'
 +++
